# mylang

./: .azure-pipelines.yml  .codecov.yml  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  defs.h  errors.h  eval.cpp  eval.h  evaltypes.cpp.h  evalvalue.h  lexer.cpp  lexer.h  mylang.cpp  operators.h  parser.cpp  parser.h  sharedarray.h  sharedstr.h  sharedval.h  syntax.cpp  syntax.h  test  tests.cpp  type_arr.cpp.h  type_func.cpp.h  type_int.cpp.h  type_str.cpp.h  types.cpp
.github/workflows/: coverage.yml  linux.yml  macos.yml  windows.yml
bench/: README.md  run.py  verify_semantics.my  verify_semantics.py
bench/ml/: 06_if_branch.ml  11_closure_counter.ml  12_higher_order.ml  14_array_subscript.ml  15_array_slice_readonly.ml  16_array_slice_write.ml  17_array_concat.ml  20_foreach_unpack.ml  22_multi_assign.ml  25_dict_member.ml  26_dict_iterate.ml  27_dict_keys_values.ml  28_str_concat.ml  30_str_index_iterate.ml  31_str_split_join.ml  32_str_build_join.ml  33_sort_ints.ml  35_map_filter.ml  40_math_builtins.ml  41_str_int_conv.ml  43_sieve.ml  45_gcd.ml  49_autoconst_fold.ml  50_autoconst_dce.ml  51_purefunc_fold.ml
bench/my/: 01_while_loop.my  02_for_loop.my  03_int_arith.my  04_float_arith.my  05_mixed_arith.my  06_if_branch.my  07_nested_loops.my  08_func_call.my  09_fib_recursive.my  10_recursion_deep.my  11_closure_counter.my  12_higher_order.my  13_array_append.my  14_array_subscript.my  15_array_slice_readonly.my  16_array_slice_write.my  17_array_concat.my  18_foreach_array.my  19_foreach_indexed.my  20_foreach_unpack.my  21_array_reverse.my  22_multi_assign.my  23_dict_insert.my  24_dict_lookup.my  25_dict_member.my  26_dict_iterate.my  27_dict_keys_values.my  28_str_concat.my  29_str_slice_readonly.my  30_str_index_iterate.my  31_str_split_join.my  32_str_build_join.my  33_sort_ints.my  34_sort_custom_cmp.my  35_map_filter.my  36_sum_builtin.my  37_range_builtin.my  38_min_max.my  39_find_builtin.my  40_math_builtins.my  (+22 more)
bench/py/: 01_while_loop.py  02_for_loop.py  03_int_arith.py  04_float_arith.py  05_mixed_arith.py  06_if_branch.py  07_nested_loops.py  08_func_call.py  09_fib_recursive.py  10_recursion_deep.py  11_closure_counter.py  12_higher_order.py  13_array_append.py  14_array_subscript.py  15_array_slice_readonly.py  16_array_slice_write.py  17_array_concat.py  18_foreach_array.py  19_foreach_indexed.py  20_foreach_unpack.py  21_array_reverse.py  22_multi_assign.py  23_dict_insert.py  24_dict_lookup.py  25_dict_member.py  26_dict_iterate.py  27_dict_keys_values.py  28_str_concat.py  29_str_slice_readonly.py  30_str_index_iterate.py  31_str_split_join.py  32_str_build_join.py  33_sort_ints.py  34_sort_custom_cmp.py  35_map_filter.py  36_sum_builtin.py  37_range_builtin.py  38_min_max.py  39_find_builtin.py  40_math_builtins.py  (+21 more)
plans/: function-inlining.md  function-templates.md  hash-and-dict.md  optional-and-ternary.md  reflection.md  repl-introspection.md  repl.md  structs.md  type-driven-specialization.md  type-inference-questions.md  type-inference.md  typed-arrays.md  typed-containers-syntax.md
py_samples/: loop.py
samples/: fib  gcd  loop  phonebook  primes  primes2  rand_sort  shopping  strloop
samples/py/: loop.py  primes2.py  rand_sort.py  strloop.py
src/: analyzer.cpp  analyzer.h  backtrace.cpp  backtrace.h  bitops.h  coderender.cpp  coderender.h  defs.h  errfmt.cpp  errfmt.h  errors.h  eval.cpp  eval.h  evaltypes.cpp.h  evalvalue.h  exceptionobj.h  flatval.h  hashing.h  highlight.cpp  highlight.h  inferencer.cpp  inferencer.h  intrusiveptr.h  lexer.cpp  lexer.h  lineedit.cpp  lineedit.h  mylang.cpp  operators.h  parser.cpp  parser.h  reflect.h  repl.cpp  repl.h  replhelp.cpp  replhelp.h  resolver.cpp  resolver.h  sharedarray.h  shareddict.h  (+18 more)
src/builtins/: arr.cpp.h  dict.cpp.h  generic.cpp.h  io.cpp.h  num.cpp.h  reflect.cpp.h  str.cpp.h
src/flat/: flatval.h  sharedarray.h  shareddict.h  sharedexception.h  sharedstr.h
src/types/: arr.cpp.h  bool.cpp.h  dict.cpp.h  exception.cpp.h  float.cpp.h  func.cpp.h  int.cpp.h  str.cpp.h  struct.cpp.h
